* TODO: updated * autogen: only libltdl needs autoheader * doc/libtool.texi (link mode): documented -export-symbols-regex   and updated -export-symbols * doc/libtool.texi (script contents): documented   always_export_symbols, export_symbols_cmd, exclude_expsyms,   include_expsyms, dlopen and dlopen_self   more detailed description of need_lib_prefix * ltconfig.in: a "'" was missing in the default value   of export_symbols_cmd * ltmain.in: implemented -export-symbols-regex

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1022,7 +1022,7 @@ hardcode_minus_L=no
 hardcode_shlibpath_var=unsupported
 runpath_var=
 always_export_symbols=no
-export_symbols_cmd="$NM $libobjs | $global_symbol_pipe | sed '\''s/.* //'\' | sort | uniq > $export_symbols"
+export_symbols_cmd='$NM $libobjs | $global_symbol_pipe | sed '\''s/.* //'\'' | sort | uniq > $export_symbols'
 # include_expsyms should be a list of space-separated symbols to be *always*
 # included in the symbol list
 include_expsyms=
