* ltmain.in (version_type): Implement irix versioning. * ltconfig.in (irix{5,6}*): Use new irix shared object versioning. * TODO: remove irix versioning from TODO list.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1682,7 +1682,7 @@ hpux9* | hpux10* | hpux11*)
   ;;
 
 irix5*)
-  version_type=osf
+  version_type=irix
   soname_spec='${libname}${release}.so'
   library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so $libname.so'
   shlibpath_var=LD_LIBRARY_PATH
@@ -1691,7 +1691,7 @@ irix5*)
   ;;
 
 irix6*)
-  version_type=osf
+  version_type=irix
   need_lib_prefix=no
   need_version=no
   soname_spec='${libname}${release}.so'
