--- a/ltmain.in
+++ b/ltmain.in
@@ -1619,7 +1619,7 @@ compiler."
 	none) ;;
 
 	irix)
-	  major=`expr $current - $age`
+	  major=`expr $current - $age + 1`
 	  versuffix="$major.$revision"
 	  verstring="sgi$major.$revision"
 
