--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1664,15 +1664,18 @@ freebsd*)
     freebsd-elf*)
       deplibs_check_method='file_magic ELF [0-9][0-9]*-bit [LM]SB shared object'
       file_magic_cmd=file
+      library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so $libname.so'
+      need_version=no
+      need_lib_prefix=no
       ;;
     freebsd-*)
       deplibs_check_method=unknown
+      library_names_spec='${libname}${release}.so$versuffix $libname.so$versuffix'
+      need_version=yes
       ;;
   esac
-  library_names_spec='${libname}${release}.so$versuffix $libname.so$versuffix'
   finish_cmds='PATH="$PATH:/sbin" OBJFORMAT="$objformat" ldconfig -m $libdir'
   shlibpath_var=LD_LIBRARY_PATH
-  need_version=yes
   ;;
 
 gnu*)
