--- a/ltmain.in
+++ b/ltmain.in
@@ -802,6 +802,7 @@ compiler."
     avoid_version=no
     dlfiles=
     dlprefiles=
+    dlself=no
     export_dynamic=no
     export_symbols=
     export_symbols_regex=
@@ -865,6 +866,13 @@ compiler."
 	  fi
 	  case "$arg" in
 	  *.la | *.lo) ;;  # We handle these cases below.
+	  self)
+	    if test "$prev" = dlprefiles; then
+	      dlself=yes
+	    elif test "$prev" = dlfiles && test "$dlopen_self" = no; then
+	      dlself=yes
+	    fi
+	    ;;
 	  *)
 	    dlprefiles="$dlprefiles $arg"
 	    test "$prev" = dlfiles && dlfiles="$dlfiles $arg"
@@ -948,12 +956,6 @@ compiler."
 	    eval arg=\"$export_dynamic_flag_spec\"
 	  else
 	    arg=
-	  fi
-	  if test "$preload" = no; then
-	    # Add the symbol object into the linking commands.
-	    compile_command="$compile_command @SYMFILE@"
-	    finalize_command="$finalize_command @SYMFILE@"
-	    preload=yes
 	  fi
 	fi
 	;;
@@ -2008,9 +2010,9 @@ EOF
 	fi
         
 	# Prepare the list of exported symbols
-	if test -z "$run" && test -z "$export_symbols"; then
-	  $show "extracting global symbols from \`$libname'"
+	if test -z "$export_symbols"; then
 	  if test "$always_export_symbols" = yes || test -n "$export_symbols_regex"; then
+	    $show "extracting global symbols from \`$libname'"
 	    export_symbols="$objdir/$libname.exp"
 	    $run $rm $export_symbols
 	    eval cmds=\"$export_symbols_cmds\"
@@ -2028,9 +2030,10 @@ EOF
 	      $run eval '$mv "$export_symbols"T "$export_symbols"'
 	    fi
 	  fi
-	  if test -n "$include_expsyms"; then
-	    $run eval '$echo "X$include_expsyms" | $SP2NL >> "$export_symbols"'
-	  fi
+	fi
+
+	if test -n "$export_symbols" && test -n "$include_expsyms"; then
+	  $run eval '$echo "X$include_expsyms" | $SP2NL >> "$export_symbols"'
 	fi
 
 	# Do each of the archive commands.
@@ -2168,6 +2171,11 @@ EOF
 	$echo "$modename: warning: \`-release' is ignored for programs" 1>&2
       fi
 
+      if test "$dlself" = yes && test "$export_dynamic" = no; then
+	$echo "$modename: error: \`-dlopen self' requires \`-export-dynamic'" 1>&2
+	exit 1
+      fi
+
       if test -n "$rpath$xrpath"; then
 	# If the user specified any rpath flags, then add them.
 	for libdir in $rpath $xrpath; do
@@ -2226,7 +2234,7 @@ EOF
       fi
 
       dlsyms=
-      if test -n "$dlfiles$dlprefiles"; then
+      if test -n "$dlfiles$dlprefiles" || test "$dlself" = yes; then
         if test -n "$NM" && test -n "$global_symbol_pipe"; then
 	  dlsyms="${outputname}S.c"
 	else
@@ -2270,7 +2278,7 @@ extern \"C\" {
 /* External symbol declarations for the compiler. */\
 "
 
-	  if test "$export_dynamic" = yes && test "$dlopen_self" = no; then
+	  if test "$dlself" = yes; then
 	    if test -n "$export_symbols"; then
 	      $run eval 'sed -e "s/^\(.*\)/\1 \1/" < "$export_symbols" > "$nlist"'
 	    else
@@ -2330,7 +2338,7 @@ lt_preloaded_symbols[] =
 {\
 "
 
-	    if test "$export_dynamic" = yes && test "$dlopen_self" = no; then
+	    if test "$dlself" = yes; then
 	      # First entry is the program itself
 	      echo >> "$output_objdir/$dlsyms" "\
   {\"@PROGRAM@\", (lt_ptr_t) 0},"
