* depdemo: moved each library into a subdirectory   to test hardcoding * ltconfig.in: added hardcode_into_libs (whether library paths   should be hardcoded into the libraries instead of the program),   shlibpath_overrides_runpath, must_relink * ltmain.in: renamed link-install mode to relink,   save the command line arguments properly, simplified hardcoding,   use relative/absolute paths where appropriate,   take care of shlibpath_overrides_runpath,   relinking works now (for programs as well as for libraries)   hardcode all (even dependency_libs) library paths into a program,   don't add shlibpath/runpath to compile_command,   thousands of bugfixes... * inter-library dependencies are now _fully_ functional !

--- a/configure.in
+++ b/configure.in
@@ -41,7 +41,7 @@ AC_PROG_AWK
 
 dnl all subdirectories that are configured on demand, but that must be
 dnl included in the distribution
-CONF_SUBDIRS="libltdl demo mdemo depdemo cdemo"
+CONF_SUBDIRS="libltdl demo mdemo cdemo depdemo"
 AC_SUBST(CONF_SUBDIRS)
 
 ACINCLUDE_M4_LIST="${srcdir}/acinclude.m4 "
