--- a/depdemo/configure.in
+++ b/depdemo/configure.in
@@ -19,4 +19,10 @@ AC_CHECK_LIB(m, cos, LIBADD_M="-lm", LIBADD_M=)
 AC_SUBST(LIBADD_M)
 
 dnl Output the makefile
-AC_OUTPUT(Makefile)
+AC_OUTPUT(
+Makefile
+l1/Makefile
+l2/Makefile
+l3/Makefile
+l4/Makefile
+)
