* libltdl/configure.in: check for dld.h * libltdl/ltdl.c: include dld.h (dld_open) it's spelled memory_error, not no_memory_error Reported by Stefan Burstroem <f94sbu@efd.lth.se>

--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -82,7 +82,7 @@ AC_DEFINE_UNQUOTED(LTDL_OBJDIR, "$libltdl_cv_objdir/",
   [Define to the sub-directory in which libtool stores uninstalled libraries. ])
 
 AC_HEADER_STDC
-AC_CHECK_HEADERS(malloc.h memory.h stdlib.h stdio.h ctype.h dlfcn.h dl.h)
+AC_CHECK_HEADERS(malloc.h memory.h stdlib.h stdio.h ctype.h dlfcn.h dl.h dld.h)
 AC_CHECK_HEADERS(string.h strings.h, break)
 AC_CHECK_FUNCS(strdup strchr strrchr index rindex)
 
