--- a/ltmain.in
+++ b/ltmain.in
@@ -1868,7 +1868,7 @@ EOF
 			esac
 		      done
 		      if eval $file_magic_cmd \"\$potlib\" \
-			 | sed '11,$d' \
+			 | sed 10q \
 			 | egrep "$file_magic_regex" > /dev/null; then
 			newdeplibs="$newdeplibs $a_deplib"
 			a_deplib=""
