* updated to HEAD * libtool.m4: added the macros AC_ENABLE/DISABLE_FAST_INSTALL   for optional fast installation * ltconfig.in: added new flag --enable-fast-install

--- a/ltmain.in
+++ b/ltmain.in
@@ -794,10 +794,11 @@ compiler."
     avoid_version=no
     dlfiles=
     dlprefiles=
+    dlself=no
     export_dynamic=no
     export_symbols=
+    export_symbols_regex=
     generated=
-    hardcode_libdirs=
     libobjs=
     ltlibs=
     module=no
@@ -854,6 +855,15 @@ compiler."
 	  fi
 	  case "$arg" in
 	  *.la | *.lo) ;;  # We handle these cases below.
+	  self)
+	    if test "$prev" = dlprefiles; then
+	      dlself=yes
+	    elif test "$prev" = dlfiles && test "$dlopen_self" != yes; then
+	      dlself=yes
+	    fi
+	    prev=
+	    continue
+	    ;;
 	  *)
 	    dlprefiles="$dlprefiles $arg"
 	    test "$prev" = dlfiles && dlfiles="$dlfiles $arg"
@@ -861,12 +871,17 @@ compiler."
 	    ;;
 	  esac
 	  ;;
-	exportsyms)
+	expsyms)
 	  export_symbols="$arg"
 	  if test ! -f "$arg"; then
 	    $echo "$modename: symbol file \`$arg' does not exist"
 	    exit 1
 	  fi
+	  prev=
+	  continue
+	  ;;
+	expsyms_regex)
+	  export_symbols_regex="$arg"
 	  prev=
 	  continue
 	  ;;
@@ -932,20 +947,19 @@ compiler."
 	  else
 	    arg=
 	  fi
-	  if test "$preload" = no; then
-	    # Add the symbol object into the linking commands.
-	    compile_command="$compile_command @SYMFILE@"
-	    preload=yes
-	  fi
 	fi
 	;;
 
-      -export-symbols)
-	if test -n "$export_symbols"; then
+      -export-symbols | -export-symbols-regex)
+	if test -n "$export_symbols" || test -n "$export_symbols_regex"; then
 	  $echo "$modename: cannot have more than one -exported-symbols"
 	  exit 1
 	fi
-	prev=exportsyms
+	if test "$arg" = "-export-symbols"; then
+	  prev=expsyms
+	else
+	  prev=expsyms_regex
+	fi
 	continue
 	;;
 
@@ -1059,7 +1073,7 @@ compiler."
 	# A library object.
 	if test "$prev" = dlfiles; then
 	  dlfiles="$dlfiles $arg"
-	  if test "$build_libtool_libs" = yes; then
+	  if test "$build_libtool_libs" = yes && test "$dlopen" = yes; then
 	    prev=
 	    continue
 	  else
@@ -1127,8 +1141,8 @@ compiler."
 	# This library was specified with -dlopen.
 	if test "$prev" = dlfiles; then
 	  dlfiles="$dlfiles $arg"
-	  if test -z "$dlname" || test "$build_libtool_libs" = no; then
-	    # If there is no dlname or we're linking statically,
+	  if test -z "$dlname" || test "$dlopen" != yes || test "$build_libtool_libs" = no; then
+	    # If there is no dlname, no dlopen support or we're linking statically,
 	    # we need to preload.
 	    prev=dlprefiles
 	  else
@@ -1179,11 +1193,6 @@ compiler."
       exit 1
     fi
 
-    if test -n "$export_symbols" && test "$module" = yes; then
-      $echo "$modename: \`-export-symbols' is not supported for modules"
-      exit 1
-    fi
-    
     oldlibs=
     # calculate the name of the file, without its directory
     outputname=`$echo "X$output" | $Xsed -e 's%^.*/%%'`
@@ -1399,6 +1408,20 @@ compiler."
 	verstring=
 	case "$version_type" in
 	none) ;;
+
+	irix)
+	  major=`expr $current - $age + 1`
+	  versuffix="$major.$revision"
+	  verstring="sgi$major.$revision"
+
+	  # Add in all the interfaces that we are compatible with.
+	  loop=$revision
+	  while test $loop != 0; do
+	    iface=`expr $revision - $loop`
+	    loop=`expr $loop - 1`
+	    verstring="sgi$major.$iface:$verstring"
+	  done
+	  ;;
 
 	linux)
 	  major=.`expr $current - $age`
@@ -1759,6 +1782,7 @@ compiler."
       fi
 
       dep_rpath=
+      hardcode_libdirs=
       if test -n "$rpath$xrpath" && test "$hardcode_into_libs" = yes && test -n "$hardcode_libdir_flag_spec"; then
 	for dir in $rpath $xrpath; do
 	  libdir="$dir"
@@ -1933,7 +1957,7 @@ EOF
 				   | $Xsed -e 's,[^/]*$,,'`"$potliblink";;
 			esac
 		      done
-		      if eval $file_magic_command \"\$potlib\" \
+		      if eval $file_magic_cmd \"\$potlib\" \
 			 | sed '11,$d' \
 			 | egrep "$file_magic_regex" > /dev/null; then
 			newdeplibs="$newdeplibs $a_deplib"
@@ -2066,14 +2090,47 @@ EOF
 	  done
 	fi
 
+	if test "$thread_safe" = yes && test -n "$thread_safe_flag_spec"; then
+	  eval flag=\"$thread_safe_flag_spec\"
+
+	  linkopts="$linkopts $flag"
+	fi
+        
+	# Prepare the list of exported symbols
+	if test -z "$export_symbols"; then
+	  if test "$always_export_symbols" = yes || test -n "$export_symbols_regex"; then
+	    $show "generating symbol list for \`$libname.la'"
+	    export_symbols="$objdir/$libname.exp"
+	    $run $rm $export_symbols
+	    eval cmds=\"$export_symbols_cmds\"
+	    IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
+	    for cmd in $cmds; do
+	      IFS="$save_ifs"
+	      $show "$cmd"
+	      $run eval "$cmd" || exit $?
+	    done
+	    IFS="$save_ifs"
+	    if test -n "$export_symbols_regex"; then
+	      $show "egrep -e \"$export_symbols_regex\" \"$export_symbols\" > \"$export_symbols\"T"
+	      $run eval 'egrep -e "$export_symbols_regex" "$export_symbols" > "$export_symbols"T'
+	      $show "$mv \"$export_symbols\"T \"$export_symbols\""
+	      $run eval '$mv "$export_symbols"T "$export_symbols"'
+	    fi
+	  fi
+	fi
+
+	if test -n "$export_symbols" && test -n "$include_expsyms"; then
+	  $run eval '$echo "X$include_expsyms" | $SP2NL >> "$export_symbols"'
+ 	fi
+
 	# Make a backup of the uninstalled library when relinking
 	if test "$relink" = yes && test "$hardcode_into_libs" = yes ; then
 	  $run eval '(cd $output_objdir && $rm "$realname"U && $mv $realname "$realname"U)' || exit $?
 	fi
 
 	# Do each of the archive commands.
-	if test -n "$export_symbols" && test -n "$archive_sym_cmds"; then
-	  eval cmds=\"$archive_sym_cmds\"
+	if test -n "$export_symbols" && test -n "$archive_expsym_cmds"; then
+	  eval cmds=\"$archive_expsym_cmds\"
 	else
 	  eval cmds=\"$archive_cmds\"
 	fi
@@ -2210,6 +2267,17 @@ EOF
 	$echo "$modename: warning: \`-release' is ignored for programs" 1>&2
       fi
 
+      if test "$preload" = yes; then
+	if test "$dlopen" = unknown || test "$dlopen_self" = unknown; then
+	  $echo "$modename: warning: \`AC_LIBTOOL_DLOPEN' not used. Assuming no dlopen support."
+	fi 
+      fi
+    
+      if test "$dlself" = yes && test "$export_dynamic" = no; then
+	$echo "$modename: error: \`-dlopen self' requires \`-export-dynamic'" 1>&2
+	exit 1
+      fi
+       
       # Find libtool libraries and add their dependencies/rpaths
       newdeplibs=
       newdependency_libs=
@@ -2539,9 +2607,10 @@ EOF
       done
       
       deplibs="$newdeplibs"
-      dep_rpath=
 
       # Now hardcode the library paths
+      dep_rpath=
+      hardcode_libdirs=
       if test -n "$rpath$xrpath"; then
 	# If the user specified any rpath flags, then add them.
 	for libdir in $rpath $xrpath; do
@@ -2599,10 +2668,13 @@ EOF
 	compile_command=`$echo "X$compile_command" | $SP2NL | $Xsed -e "$lo2o" | $NL2SP`
       fi
 
-      if test "$export_dynamic" = yes || test -n "$dlfiles$dlprefiles" && test -n "$NM" && test -n "$global_symbol_pipe"; then
-	dlsyms="${outputname}S.c"
-      else
-	dlsyms=
+      dlsyms=
+      if test -n "$dlfiles$dlprefiles" || test "$dlself" = yes; then
+        if test -n "$NM" && test -n "$global_symbol_pipe"; then
+	  dlsyms="${outputname}S.c"
+	else
+	  $echo "$modename: not configured to extract global symbols from dlpreopened files" 1>&2
+	fi
       fi
 
       if test -n "$dlsyms"; then
@@ -2641,7 +2713,7 @@ extern \"C\" {
 /* External symbol declarations for the compiler. */\
 "
 
-	  if test "$export_dynamic" = yes; then
+	  if test "$dlself" = yes; then
 	    if test -n "$export_symbols"; then
 	      $run eval 'sed -e "s/^\(.*\)/\1 \1/" < "$export_symbols" > "$nlist"'
 	    else
@@ -2665,9 +2737,14 @@ extern \"C\" {
 
 	    # Try sorting and uniquifying the output.
 	    if sort "$nlist" | uniq > "$nlist"T; then
-	      mv -f "$nlist"T "$nlist"
+	      $mv "$nlist"T "$nlist"
 	    else
 	      $rm "$nlist"T
+	    fi
+
+	    if test -n "$exclude_expsyms"; then
+	      egrep -v "^($exclude_expsyms) " "$nlist" > "$nlist"T
+	      $mv "$nlist"T "$nlist"
 	    fi
 
 	    if test -f "$nlist"; then
@@ -2696,11 +2773,10 @@ lt_preloaded_symbols[] =
 {\
 "
 
-	    # First entry is always the program itself
-	    echo >> "$output_objdir/$dlsyms" "\
-  {\"${output}\", (lt_ptr_t) 0},"
-
-	    if test "$export_dynamic" = yes; then
+	    if test "$dlself" = yes; then
+	      # First entry is the program itself
+	      echo >> "$output_objdir/$dlsyms" "\
+  {\"@PROGRAM@\", (lt_ptr_t) 0},"
 	      if test -n "$export_symbols"; then
 		sed 's/^\(.*\)/  {"\1", (lt_ptr_t) \&\1},/' < "$export_symbols" >> "$output_objdir/$dlsyms"
 	      else
@@ -2708,7 +2784,13 @@ lt_preloaded_symbols[] =
 		for arg in $progfiles; do
 		  eval "$NM $arg | $global_symbol_pipe >> '$nlist'"
 		done
+
 		if test -f "$nlist"; then
+		  if test -n "$exclude_expsyms"; then
+		    egrep -v "^($exclude_expsyms) " "$nlist" > "$nlist"T
+		    $mv "$nlist"T "$nlist"
+		  fi
+
 		  sed 's/^\(.*\) \(.*\)$/  {"\1", (lt_ptr_t) \&\2},/' < "$nlist" >> "$output_objdir/$dlsyms"
 		else
 		  echo '/* NONE */' >> "$output_objdir/$dlsyms"
@@ -2723,6 +2805,11 @@ lt_preloaded_symbols[] =
 	      eval "$NM $arg | $global_symbol_pipe > '$nlist'"
 
 	      if test -f "$nlist"; then
+		if test -n "$exclude_expsyms"; then
+		  egrep -v "^($exclude_expsyms) " "$nlist" > "$nlist"T
+		  $mv "$nlist"T "$nlist"
+		fi
+
 		sed 's/^\(.*\) \(.*\)$/  {"\1", (lt_ptr_t) \&\2},/' < "$nlist" >> "$output_objdir/$dlsyms"
 	      else
 		echo '/* NONE */' >> "$output_objdir/$dlsyms"
@@ -2761,10 +2848,7 @@ static const void *lt_preloaded_setup() {
 	# We keep going just in case the user didn't refer to
 	# lt_preloaded_symbols.  The linker will fail if global_symbol_pipe
 	# really was required.
-	if test -n "$dlfiles$dlprefiles"; then
-	  $echo "$modename: not configured to extract global symbols from dlpreopened files" 1>&2
-	fi
-
+	
 	# Nullify the symbol file.
 	compile_command=`$echo "X$compile_command" | $Xsed -e "s% @SYMFILE@%%"`
       fi
