* ltconfig.in (cygwin, shlibpath_overrides_runpath): I'm not even sure whether win32 honours the runpath at all when searching for a dll to load!  Anyway, when set to yes this prevents a gratuitous warning.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1624,6 +1624,7 @@ cygwin* | mingw*)
   deplibs_check_method='file_magic file format pei*-i386.*architecture: i386'
   file_magic_cmd='objdump -f'
   need_lib_prefix=no
+  shlibpath_overrides_runpath=yes
   # FIXME: first we should search . and the directory the executable is in
   shlibpath_var=PATH
   ;;
