--- a/depdemo/l4/Makefile.am
+++ b/depdemo/l4/Makefile.am
@@ -5,4 +5,4 @@ INCLUDES = -I$(top_srcdir)
 
 lib_LTLIBRARIES = libl4.la
 libl4_la_SOURCES = l4.c l4.h
-libl4_la_LIBADD = $(top_builddir)/l3/libl3.la $(LIBADD_M)
+libl4_la_LIBADD = $(top_builddir)/l3/libl3.la
